--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "new-test": "turbo gen test",
     "clean": "lerna clean -y && lerna run clean && lerna exec 'node ../../scripts/rm.mjs dist'",
     "build": "turbo run build --remote-cache-timeout 60 --summarize true",
+    "build:creative-example": "pnpm --filter=next build && pnpm --dir examples/with-next-creative-studio build",
     "lerna": "lerna",
     "dev": "turbo run dev --parallel --filter=\"!@next/bundle-analyzer-ui\"",
+    "dev:creative-example": "pnpm --filter=next build && pnpm --dir examples/with-next-creative-studio dev",
     "bench:render-pipeline": "tsx bench/render-pipeline/benchmark.ts",
     "bench:render-pipeline:analyze": "tsx bench/render-pipeline/analyze-profiles.ts",
     "pack-next": "tsx scripts/pack-next.ts",
